--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         header .wrap-text .medsos button
         {
             font-size: 64px;
+            text-decoration: none;
             margin-bottom: 20px;
         }
         .all{
@@ -189,9 +190,9 @@
                 terlupakan.</h2>
                 <div class="medsos">
                     <p>JOIN OUR SOCIAL MEDIA</p>
-                    <button><i class="fa-brands fa-discord"></i></button>
-                    <button><i class="fa-brands fa-instagram"></i></button>
-                    <button><i class="fa-brands fa-twitter"></i></button>
+                    <button><a href="#"><i class="fa-brands fa-discord"></i></a></button>
+                    <button><a href="https://www.instagram.com/1bbnuuu/"></a><i class="fa-brands fa-instagram"></i></button>
+                    <button><a href="#"></a><i class="fa-brands fa-twitter"></i></button>
                 </div>
         </div>
     </header>
