--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>COLLECT</button>
+                    <button>PESAN</button>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>COLLECT</button>
+                    <button>PESAN</button>
                 </div>
             </div>
         </div> 
@@ -223,7 +223,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>COLLECT</button>
+                    <button>PESAN</button>
                 </div>
             </div>
         </div> 
@@ -233,7 +233,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>COLLECT</button>
+                    <button>PESAN</button>
                 </div>
             </div>
         </div> 
@@ -243,7 +243,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>COLLECT</button>
+                    <button>PESAN</button>
                 </div>
             </div>
         </div> 
@@ -253,7 +253,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>COLLECT</button>
+                    <button>PESAN</button>
                 </div>
             </div>
         </div> 
