--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>PESAN</button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -223,7 +223,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>PESAN</button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -233,7 +233,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>PESAN</button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -243,7 +243,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>PESAN</button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -253,7 +253,7 @@
                 <div class="text">
                     <h2>pixel character</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button>PESAN</button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
