--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 </body>
 <footer>
     <nav>
-        <a href="#">Ibnurofik29@gmail.com</a>
-        <a href="#">+6264645645623</a>
+        <a href="mailto:ibnurofik29@gmail.com?subject=Pertanyaan%20Tentang%20Produk&body=Halo%20Saya%20ingin%20bertanya">ibnurofik29@gmail.com</a>
+        <a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">WhatsAPP</a>
         <a href="#">2024</a>
     </nav>
 </footer>
