--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             margin-bottom: 20px;
         }
         .all{
+            margin: 0 auto;
+            max-width: 1400px;
             width: 80%;
             display: flex;
             flex-wrap: wrap;
@@ -174,20 +176,9 @@
         <img src="background.png" alt="">
         <div class="wrap-text">
             <h1>WELCOME</h1>
-            <h2>Selamat datang di Marketplace Penjualan Produk Digital, 
-                tempat terbaik untuk memenuhi segala kebutuhan digital Anda! 
-                Kami bangga menjadi destinasi utama bagi para konsumen yang 
-                mencari produk digital berkualitas tinggi dan inovatif. Dengan 
-                beragam pilihan yang kami tawarkan, Anda dapat menjelajahi dunia 
-                digital dengan lebih mudah dan memperoleh pengalaman yang tak 
-                terlupakan.<br><br>
-                Selamat datang di Marketplace Penjualan Produk Digital, 
-                tempat terbaik untuk memenuhi segala kebutuhan digital Anda! 
-                Kami bangga menjadi destinasi utama bagi para konsumen yang 
-                mencari produk digital berkualitas tinggi dan inovatif. Dengan 
-                beragam pilihan yang kami tawarkan, Anda dapat menjelajahi dunia 
-                digital dengan lebih mudah dan memperoleh pengalaman yang tak 
-                terlupakan.</h2>
+            <h2>Sezari adalah destinasi kuliner yang menyajikan beragam hidangan lezat dan menggugah selera. Kami percaya bahwa setiap makanan adalah sebuah pengalaman, dan kami berkomitmen untuk memberikan cita rasa yang tak terlupakan kepada setiap pelanggan. <br><br>
+
+              Dengan bahan-bahan berkualitas dan resep yang diracik dengan penuh cinta, Sezari menawarkan berbagai pilihan, mulai dari masakan tradisional hingga kreasi modern yang inovatif. Setiap hidangan disiapkan dengan teliti untuk memastikan kelezatan dan kepuasan Anda.</h2>
                 <div class="medsos">
                     <p>JOIN OUR SOCIAL MEDIA</p>
                     <button><a href="#"><i class="fa-brands fa-discord"></i></a></button>
