--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="text">
                     <h2>Pie</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20pesan%20pie" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
                 <div class="text">
                     <h2>Sate</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20pesan%20sate" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -214,7 +214,7 @@
                 <div class="text">
                     <h2>Nasi kecampur</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20pesan%20nasi%20campur" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -224,7 +224,7 @@
                 <div class="text">
                     <h2>Sop</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20pesan%20sop" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -234,7 +234,7 @@
                 <div class="text">
                     <h2>Ktiwawr</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20pesan%20ktiwawr" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
@@ -244,7 +244,7 @@
                 <div class="text">
                     <h2>gulung hijau</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dolore, eveniet neque nobis nulla!</p>
-                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20bertanya" target="_blank">PESAN</a></button>
+                    <button><a href="https://wa.me/6282155791757?text=Halo%20saya%20ingin%20pesan%20gulung%20hijau" target="_blank">PESAN</a></button>
                 </div>
             </div>
         </div> 
